chore(db): prisma setup for planetscale

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -35,7 +35,8 @@
                 "components",
                 "auth",
                 "repo",
-                "api"
+                "api",
+                "db"
             ]
         ]
     }
